# experiment-autogen

./: README.md  pyproject.toml
experiments_autogen/: function_calling.py
